--- a/README
+++ b/README
@@ -20,6 +20,11 @@ This is a work in progress.  On the to do list...
 - Advanced sample (same as basic, but triangles can be moved)
 - 3D terrain sample
 - XCode sample projects and static lib ( OSX + iOS )
+
+-----------------------------------------
+
+Version 0.0.1
+
 -----------------------------------------
 
 http://www.bantherewind.com
