--- a/README
+++ b/README
@@ -16,8 +16,7 @@ http://en.wikipedia.org/wiki/Delaunay_triangulation
 
 This is a work in progress.  On the to do list...
 
-- 3D triangulation
-- Advanced sample (same as basic, but triangles can be moved)
+- bool intersects( const Triangle & triangle );
 - 3D terrain sample
 - XCode sample projects and static lib ( OSX + iOS )
 
