--- a/README
+++ b/README
@@ -16,10 +16,15 @@ http://en.wikipedia.org/wiki/Delaunay_triangulation
 
 This is a work in progress.  On the to do list...
 
-- rotate( float degrees );
-- bool intersects( const Triangle & triangle );
-- 3D terrain sample ( 2D tri + Z for height )
-- XCode sample projects and static lib ( OSX + iOS )
+- New Triangle:: methods
+   - void scale( Vec2f scale );
+   - void scale( float x, float y );
+   - void scale( float scale );
+   - void rotate( float degrees );
+   - bool intersects( const Triangle & triangle );
+- 3D terrain sample (2D tri + Z for height)
+- Map triangles back to source index (needed to obtain Z)
+- XCode sample projects and static lib (OSX + iOS)
 
 -----------------------------------------
 
